codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_manager_popup_local_only_server.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 438
expression: popup
---
  MCP Servers
  Manage MCP servers from /mcp. Repo overrides apply to the current cwd.

  Type to search MCP servers
› docs  Press Enter to manage this MCP server.

  Press enter to confirm or esc to go back
